--- a/전처리_결과_파일구조.md
+++ b/전처리_결과_파일구조.md
@@ -38,7 +38,6 @@
     'product_vector',                # list[float]: Word2Vec 상품 벡터
     'representative_review_id',      # int: 대표 리뷰 ID
     'representative_similarity',     # float: 대표 리뷰 유사도
-    'recommend_score',               # float: 추천 점수
     'avg_rating_with_text',          # float: 텍스트 있는 리뷰 평균 평점
     'avg_rating_without_text',       # float: 텍스트 없는 리뷰 평균 평점
     'text_review_ratio',             # float: 텍스트 리뷰 비율 (%)
@@ -179,10 +178,12 @@ top_negative = df[df['sentiment_type'] == 'negative'].nlargest(10, 'score')
     'nickname',        # str: 작성자 닉네임
     'has_image',       # bool/None: 이미지 첨부 여부
     'helpful_count',   # float: 도움됨 수
-    'sentiment_score', # None: 감성 점수 (향후 모델 예측값)
+    'sentiment_score', # None or float: 감성 점수 (0~1, model/predict_sentiment_scores.py 실행 시 추가)
     'word2vec'         # list[float]: Word2Vec 벡터 (100차원)
 ]
 ```
+
+> **Note**: `sentiment_score`는 전처리 직후에는 `None`이며, `src/model/predict_sentiment_scores.py`를 실행하면 0.0~1.0 사이의 긍정 확률값으로 채워집니다.
 
 ### 파일 예시
 
@@ -237,6 +238,7 @@ positive = df[df['label'] == 1]
         ↓
 ┌────────────────────────────────────────────┐
 │ 4가지 Parquet 파일 생성                    │
+│ (sentiment_score는 None 상태)              │
 ├────────────────────────────────────────────┤
 │ 1. integrated_products_final.parquet       │
 │    - 상품 정보 + 통계 + 벡터               │
@@ -249,6 +251,18 @@ positive = df[df['label'] == 1]
 │                                            │
 │ 4. partitioned_reviews_category_*.parquet  │
 │    - 카테고리별 리뷰 데이터                │
+└────────────────────────────────────────────┘
+        ↓
+┌────────────────────────────────────────────┐
+│ [선택] 모델 학습 및 sentiment_score 추가  │
+│ (src/model/ 폴더)                          │
+├────────────────────────────────────────────┤
+│ 1. train_sentiment_model.py                │
+│    → models/sentiment_model.joblib 생성    │
+│                                            │
+│ 2. predict_sentiment_scores.py             │
+│    → partitioned_reviews에 sentiment_score │
+│      추가 (0~1 긍정 확률)                  │
 └────────────────────────────────────────────┘
 ```
 
